--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,14 @@ To-Do
 			-v verbose (lots of output)
 			-q quick (little output, no false positives)
 			-b binary (vg)
-			-g binary args (optional, must be with -b) (vg)
+		touch up/productize
+			make sure all the arguments are used or remove them if not
+			make sure different verbosities work
+			implement the "auto file" function
+			implement the makefile option (or remove flag)
+			make sure useful error messages are displayed when bad arg options are provided
+		test
+			run unit tests on different source to verify parsing always works
 		side by side line attribution
 			get output from flawfinder and valgrind and show it side by side, allowing users of Stynamic to scroll the errors those find while having them attributed by line
 			to do this, add the 'xml=yes' arg when running valgrind, and add 'xml-fd=N' where N is the file descriptor (e.g., 1 for stdout)
